[package]
name = "rocketbot_plugin_hackernews"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = { version = "0.1" }
chrono = { version = "0.4" }
log = { version = "0.4" }
md-5 = { version = "0.10" }
regex = { version = "1.9" }
reqwest = { version = "0.12", features = ["rustls-tls"] }
rocketbot_interface = { path = "../rocketbot_interface" }
serde_json = { version = "1.0" }
