[package]
name = "rocketbot_plugin_linguistics"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = { version = "0.1" }
bitflags = { version = "2.9" }
rocketbot_interface = { path = "../rocketbot_interface" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
tokio = { version = "1.47", features = ["rt"] }
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4"] }
tracing = { version = "0.1" }

[dev-dependencies]
flate2 = { version = "1.1" }
tokio = { version = "1.47", features = ["macros", "rt", "rt-multi-thread"] }
toml = { version = "0.9" }
