[package]
name = "rocketbot_plugin_link_react"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = { version = "0.1" }
chrono = { version = "0.4" }
log = { version = "0.4" }
regex = { version = "1.9" }
rocketbot_interface = { path = "../rocketbot_interface" }
serde_json = { version = "1.0" }
