[package]
name = "rocketbot_plugin_logger"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = { version = "0.1" }
log = { version = "0.4" }
rocketbot_interface = { path = "../rocketbot_interface" }
serde_json = { version = "1.0" }
tokio = { version = "1.17", features = ["rt"] }
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4"] }
