[package]
name = "rocketbot_plugin_logger"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = { version = "0.1" }
rocketbot_interface = { path = "../rocketbot_interface" }
serde_json = { version = "1.0" }
tokio = { version = "1.37", features = ["rt"] }
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4"] }
tracing = { version = "0.1" }
