[package]
name = "rocketbot_plugin_nines"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = { version = "0.1" }
bigdecimal = { version = "0.4" }
num-bigint = { version = "0.4" }
num-traits = { version = "0.2" }
once_cell = { version = "1.18" }
regex = { version = "1.9" }
rocketbot_interface = { path = "../rocketbot_interface" }
serde_json = { version = "1.0" }
tracing = { version = "0.1" }
