[package]
name = "rocketbot_plugin_progress"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = { version = "0.1" }
once_cell = { version = "1.18" }
regex = { version = "1.9" }
rocketbot_interface = { path = "../rocketbot_interface" }
serde_json = { version = "1.0" }
tracing = { version = "0.1" }
